--- a/conclusion.tex
+++ b/conclusion.tex
@@ -1,1 +1,5 @@
 \section{Conclusion}
+Deep learning has greatly improved the performance of video objects segmentaion tasks. As the previous work shown, firstly we need to design more and more powerful network
+to have rich feature representation. In a word , we need to combine the low-level feature and high-level feature. Then temporal information is another important
+cue when tackling  video dataset. We will benefit performance improvements by combining temporal information. There are still huge space for us to explore how 
+to utilize the temporal information well.
