--- a/reference.bib
+++ b/reference.bib
@@ -7,6 +7,13 @@
   year={2015},
 }
 
+@article{PML,
+  title={Blazingly Fast Video Object Segmentation with Pixel-Wise Metric Learning},
+  author={Chen, Yuhua and Pont-Tuset, Jordi and Montes, Alberto and Van Gool, Luc},
+  journal={arXiv preprint arXiv:1804.03131},
+  year={2018}
+}
+
 @inproceedings{tang2012shifting,
   title={Shifting weights: Adapting object detectors from image to video},
   author={Tang, Kevin and Ramanathan, Vignesh and Fei-Fei, Li and Koller, Daphne},
