add subfigure package

--- a/vos.tex
+++ b/vos.tex
@@ -10,6 +10,7 @@
 \usepackage{multirow}
 \usepackage{bbding}
 \usepackage{colortbl}
+\usepackage{subfigure}
 
 % Include other packages here, before hyperref.
 \graphicspath{{figures}}
